# magpie

./: .env.example  README.md  SCRATCHPAD.md  TECHSTACK.md  pyproject.toml  ruff.toml  setup.sh  ty.toml
.references/: dspy.md  pydantic.md  ruff.md  ty.md
src/magpie/: main.py
web/: .prettierignore  README.md  package.json  turbo.json
web/apps/web/: eslint.config.js
