#:schema https://json.schemastore.org/pyproject.json

[project]
name = "magpie"
version = "0.1.0"
authors = [{ name = "ethan-wickstrom", email = "e.t.wickstrom@wustl.edu" }]
requires-python = ">=3.13"
dependencies = ["ai", "api", "core"]

[project.scripts]
magpie = "magpie.main:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/core", "packages/ai", "packages/api"]

[tool.uv.sources]
core = { workspace = true }
ai = { workspace = true }
api = { workspace = true }

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.7", "ty>=0.0.24"]
